--- a/styles/index.css
+++ b/styles/index.css
@@ -1,40 +1,81 @@
 
-        h1{
-            font-family: sans-serif;
-            color: rgb(22, 23, 24);
-        }
-        body{
-            margin: 50px;
-            background-color:rgb(112, 112, 112)
-        }
+h1{
+    font-family: sans-serif;
+    color: rgb(22, 23, 24);
+}
+body {
+    margin: 50px;
+    overflow: hidden;
+}
 
-        #videoElement{
-            width:500px;
-            height:375px;
-            background-color: rgb(71, 63, 63);
-            transition: transform 0.15s ease, filter 0.15s ease;
-            transform-origin: center center;
-        }
-        #container{
-            margin: 0px auto;
-            width: 500px;
-            height: 375px;
-            border: 10px rgb(205, 31, 221) solid;
-        }
-        .scan-button {
-        font-size: 1.5rem;
-        color: #fafafa;
-        text-transform: uppercase;
-        padding: 10px 20px;
-        border-radius: 10px;
-        border: 2px solid #fafafa;
-        background: #252525;
-        box-shadow: 3px 3px #fafafa;
-        cursor: pointer;
-        margin: 35px 0;
-        }
+#backgroundVideo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
 
-        .scan-button:active {
-        box-shadow: none;
-        transform: translate(3px, 3px);
-        }
+#bg-video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+#videoElement{
+    width: 800px;
+    height: 600px;
+    background-color: rgb(71, 63, 63);
+    transition: transform 0.15s ease, filter 0.15s ease;
+    transform-origin: center center;
+}
+#container{
+    margin: 0px auto;
+    width: 800px;
+    height: 600px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    box-shadow: 5px 5px 15px #000000;
+}
+
+.camera-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.scan-button-container{
+    cursor: pointer;
+    border: 4px solid black;
+    background-color: gray;
+    padding-bottom: 10px;
+    transition: 0.1s ease-in-out;
+    user-select: none;
+    margin-top: 50px;
+}
+
+.scan-button {
+    background-color: #dddddd;
+    border: 4px solid #fff;
+    padding: 20px 40px;
+}
+
+.scan-button span {
+    font-size: 2.5em;
+    letter-spacing: 1px;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+
+.scan-button-container:active {
+    padding: 0;
+    margin-bottom: 10px;
+    transform: translateY(10px);
+}
+
